--- a/neue Portfolio/index.html
+++ b/neue Portfolio/index.html
@@ -6,9 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="./main.js">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="myProjects/webProject/icofont/css/icofont.min.css">
     <title>Meine Portfolio</title>
 </head>
 <body>
+    <header id="header" class="header-tops"></header>
+    <div class="container">
+        <h1><a href="index.html">Bahadir Inanc</a></h1>
+        <h2>I'm a <span>Web Developer</span></h2>
+        <div class="social-links"></div>
+        <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
+    </div>
     
 </body>
 </html>
