sozialmedia   wurde hinzugefügt

--- a/neue Portfolio/index.html
+++ b/neue Portfolio/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="">
-    <link rel="stylesheet" href="myProjects/webProject/icofont/css/icofont.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <title>Meine Portfolio</title>
 </head>
 <body>
@@ -18,7 +18,30 @@
         <h1><a href="index.html">Bahadir Inanc</a></h1>
         <h2>I'm a <span>Web Developer</span></h2>
         <div class="social-links"></div>
-        <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
+        <div class="facebook">
+            <a href="#" target="_blank" ><i class="fab fa-facebook"></i></a>
+
+        </div>
+        <div class="twitter">
+            <a href="#" target="_blank"  ><i class="fab fa-twitter"></i></a>
+
+        </div>
+        <div class="instagram">
+            <a href="#" target="_blank" ><i class="fab fa-instagram"></i></a>
+
+        </div>
+        <div class="Github">
+            <a href="#" target="_blank" ><i class="fab fa-github"></i></a>
+
+        </div>
+        <div class="google">
+            <a href="#" target="_blank" ><i class="fab fa-google-plus-g"></i></a>
+
+        </div>
+        <div class="youtube">
+            <a href="#" target="_blank" ><i class="fab fa-youtube"></i></a>
+
+        </div>
     </div>
     
 </body>
