sozialmedia  wurde hinzugefügt

--- a/neue Portfolio/index.html
+++ b/neue Portfolio/index.html
@@ -13,11 +13,11 @@
     <title>Meine Portfolio</title>
 </head>
 <body>
-    <header id="header" class="header-tops"></header>
+    <header id="header" class="header-tops">
     <div class="container">
         <h1><a href="index.html">Bahadir Inanc</a></h1>
         <h2>I'm a <span>Web Developer</span></h2>
-        <div class="social-links"></div>
+      <div class="social-links">
         <div class="facebook">
             <a href="#" target="_blank" ><i class="fab fa-facebook"></i></a>
 
@@ -34,15 +34,27 @@
             <a href="#" target="_blank" ><i class="fab fa-github"></i></a>
 
         </div>
-        <div class="google">
-            <a href="#" target="_blank" ><i class="fab fa-google-plus-g"></i></a>
+        <div class="linkedin">
+            <a href="#" target="_blank" ><i class="fab fa-linkedin"></i></a>
 
         </div>
         <div class="youtube">
             <a href="#" target="_blank" ><i class="fab fa-youtube"></i></a>
 
         </div>
-    </div>
+      </div>
     
+      <nav class="nav-menu d-none d-lg-block">
+          <ul>
+              <li class="active"><a href="#header">Home</a></li>
+              <li><a href="#About">About</li>
+              <li><a href="#Skills">Skills</li>
+              <li><a href="#Resume">Resume</li>
+              <li><a href="#Services">Services</li>
+              <li><a href="#Contact">Contact</li>
+          </ul>
+      </nav>
+    </div>
+ </header>
 </body>
 </html>
