--- a/neue Portfolio/index.html
+++ b/neue Portfolio/index.html
@@ -47,11 +47,11 @@
       <nav class="nav-menu d-none d-lg-block">
           <ul>
               <li class="active"><a href="#header">Home</a></li>
-              <li><a href="#About">About</li>
-              <li><a href="#Skills">Skills</li>
-              <li><a href="#Resume">Resume</li>
-              <li><a href="#Services">Services</li>
-              <li><a href="#Contact">Contact</li>
+              <li><a href="#About">About</a></li>
+              <li><a href="#Skills">Skills</a></li>
+              <li><a href="#Resume">Resume</a></li>
+              <li><a href="#Services">Services</a></li>
+              <li><a href="#Contact">Contact</a></li>
           </ul>
       </nav>
     </div>
