--- a/neue Portfolio/index.html
+++ b/neue Portfolio/index.html
@@ -47,14 +47,23 @@
       <nav class="nav-menu d-none d-lg-block">
           <ul>
               <li class="active"><a href="#header">Home</a></li>
-              <li><a href="#About">About</a></li>
-              <li><a href="#Skills">Skills</a></li>
-              <li><a href="#Resume">Resume</a></li>
-              <li><a href="#Services">Services</a></li>
-              <li><a href="#Contact">Contact</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#skills">Skills</a></li>
+              <li><a href="#resume">Resume</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#contact">Contact</a></li>
           </ul>
       </nav>
     </div>
  </header>
+ <section id="about" class="about">
+     <div class="about-me container">
+         <div class="section-title">
+             <h2>About</h2>
+             <p>Learn more about me</p>
+         </div>
+     </div>
+ </section>
+
 </body>
 </html>
