--- a/neue Portfolio/index.html
+++ b/neue Portfolio/index.html
@@ -1,69 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./main.css">
-    <link rel="stylesheet" href="./main.js">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <title>Meine Portfolio</title>
-</head>
-<body>
-    <header id="header" class="header-tops">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+      integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="app.css" />
+  </head>
+  <body>
     <div class="container">
-        <h1><a href="index.html">Bahadir Inanc</a></h1>
-        <h2>I'm a <span>Web Developer</span></h2>
-      <div class="social-links">
-        <div class="facebook">
-            <a href="#" target="_blank" ><i class="fab fa-facebook"></i></a>
-
+      <nav>
+        <h3 id="logo">Logo.</h3>
+        <div class="nav-links">
+          <p class="nav-link">Home</p>
+          <p class="nav-link">About</p>
+          <p class="nav-link">Product</p>
         </div>
-        <div class="twitter">
-            <a href="#" target="_blank"  ><i class="fab fa-twitter"></i></a>
-
-        </div>
-        <div class="instagram">
-            <a href="#" target="_blank" ><i class="fab fa-instagram"></i></a>
-
-        </div>
-        <div class="Github">
-            <a href="#" target="_blank" ><i class="fab fa-github"></i></a>
-
-        </div>
-        <div class="linkedin">
-            <a href="#" target="_blank" ><i class="fab fa-linkedin"></i></a>
-
-        </div>
-        <div class="youtube">
-            <a href="#" target="_blank" ><i class="fab fa-youtube"></i></a>
-
-        </div>
-      </div>
-    
-      <nav class="nav-menu d-none d-lg-block">
-          <ul>
-              <li class="active"><a href="#header">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#skills">Skills</a></li>
-              <li><a href="#resume">Resume</a></li>
-              <li><a href="#services">Services</a></li>
-              <li><a href="#contact">Contact</a></li>
-          </ul>
       </nav>
+      <section id="banner">
+        <div class="banner-text">
+          <h1>Title</h1>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus
+            ullam, dicta provident deserunt ea nisi.
+          </p>
+          <button>Try now</button>
+        </div>
+        <div class="img banner-img">
+          <img
+            src="https://images.pexels.com/photos/847402/pexels-photo-847402.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+            alt="banner-image"
+          />
+        </div>
+      </section>
+      <hr />
+      <section id="about">
+        <div class="about-text">
+          <h2>About</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est
+            dolorum rerum distinctio fuga sed libero id, debitis excepturi
+            maiores, repudiandae tenetur dolor quasi impedit eius ratione quas
+            earum pariatur ut, nulla consequatur? Odit inventore, culpa modi
+            sunt eaque voluptates voluptatem?
+          </p>
+        </div>
+        <div class="img about-img">
+          <img
+            src="https://images.pexels.com/photos/158163/clouds-cloudporn-weather-lookup-158163.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+            alt="about-image"
+          />
+        </div>
+      </section>
+      <section id="vid">
+        <h3>Gördüklerinizin Çok <span>Ötesinde..</span></h3>
+        <div class="card-wrapper">
+          <div class="card">
+            <i class="fas fa-building icon"></i>
+            <h4 class="card-text">Sample</h4>
+          </div>
+          <div class="card">
+            <i class="fas fa-book icon"></i>
+            <h4 class="card-text">Sample</h4>
+          </div>
+          <div class="card">
+            <i class="fas fa-car-alt icon"></i>
+            <h4 class="card-text">Sample</h4>
+          </div>
+        </div>
+        <div class="video">
+          <video muted autoplay loop>
+            <source src="img/video1.mp4" />
+          </video>
+        </div>
+      </section>
     </div>
- </header>
- <section id="about" class="about">
-     <div class="about-me container">
-         <div class="section-title">
-             <h2>About</h2>
-             <p>Learn more about me</p>
-         </div>
-     </div>
- </section>
-
-</body>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"
+      integrity="sha512-HzAEuXwhLxwm/Jj+5ecdjzrRVrjuh2ZeIxyT1Ln37TO5pWNMnKBuU7cfd1wvRQ/k86w1oC174Yk1T7aRlBpIcA=="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"
+      integrity="sha512-A98SmLRZISk4eIxQBeCm8k0jAcwN3A3lBx4hr7baoMpV1VpxcxlZIhi5fJIZN50sQ5RlCzx8yV+Voy2cR6x0aA=="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"
+      integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ=="
+      crossorigin="anonymous"
+    ></script>
+    <script src="app.js"></script>
+  </body>
 </html>
