--- a/neue Portfolio/index.html
+++ b/neue Portfolio/index.html
@@ -14,7 +14,7 @@
       integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <div class="container">
@@ -99,6 +99,6 @@
       integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ=="
       crossorigin="anonymous"
     ></script>
-    <script src="app.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
