--- a/neue Portfolio/index.html
+++ b/neue Portfolio/index.html
@@ -19,33 +19,35 @@
   <body>
     <div class="container">
       <nav>
-        <h3 id="logo">Logo.</h3>
+        <h3 id="logo">Inc</h3>
         <div class="nav-links">
-          <p class="nav-link">Home</p>
-          <p class="nav-link">About</p>
-          <p class="nav-link">Product</p>
+          <p class="nav-link"><a href="#">Home</a></p>
+          <p class="nav-link"><a href="#">About</a></p>
+          <p class="nav-link"><a href="./vid">Skills</a></p>
+          <p class="nav-link"><a href="./vid">Contact</a></p>
         </div>
       </nav>
       <section id="banner">
+        <div class="img banner-img">
+          <img
+            src="son_deneme/gallery/assets/IMG_2217 (2).JPG"
+            alt="banner-image"/>
+        </div>
+
         <div class="banner-text">
-          <h1>Title</h1>
+          <h2>I'm a <span>Web Developer</span></h2>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus
             ullam, dicta provident deserunt ea nisi.
           </p>
-          <button>Try now</button>
+          <button>Learn more about me</button>
         </div>
-        <div class="img banner-img">
-          <img
-            src="https://images.pexels.com/photos/847402/pexels-photo-847402.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-            alt="banner-image"
-          />
-        </div>
+        
       </section>
       <hr />
       <section id="about">
         <div class="about-text">
-          <h2>About</h2>
+          <h2>About me</h2>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est
             dolorum rerum distinctio fuga sed libero id, debitis excepturi
@@ -56,30 +58,30 @@
         </div>
         <div class="img about-img">
           <img
-            src="https://images.pexels.com/photos/158163/clouds-cloudporn-weather-lookup-158163.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+            src="son_deneme/gallery/assets/light-bulbs-1125016.jpg"
             alt="about-image"
           />
         </div>
       </section>
       <section id="vid">
-        <h3>Gördüklerinizin Çok <span>Ötesinde..</span></h3>
+        <h3>My <span>Skills</span></h3>
         <div class="card-wrapper">
           <div class="card">
-            <i class="fas fa-building icon"></i>
-            <h4 class="card-text">Sample</h4>
+            <i class="fab fa-html5 icon"></i>
+            <h4 class="card-text">Html</h4>
           </div>
           <div class="card">
-            <i class="fas fa-book icon"></i>
-            <h4 class="card-text">Sample</h4>
+            <i class="fab fa-css3-alt icon"></i>
+            <h4 class="card-text">Css</h4>
           </div>
           <div class="card">
-            <i class="fas fa-car-alt icon"></i>
-            <h4 class="card-text">Sample</h4>
+            <i class="fab fa-js-square icon"></i>
+            <h4 class="card-text">JavaScript</h4>
           </div>
         </div>
         <div class="video">
           <video muted autoplay loop>
-            <source src="img/video1.mp4" />
+            <source src="./son_deneme/gallery/video1.mp4" />
           </video>
         </div>
       </section>
