--- a/neue Portfolio/index.html
+++ b/neue Portfolio/index.html
@@ -19,18 +19,18 @@
   <body>
     <div class="container">
       <nav>
-        <h3 id="logo">Inc</h3>
+        <h3 id="logo"><img src="son_deneme/gallery/assets/Başlıksız-1.png"></h3>
         <div class="nav-links">
           <p class="nav-link"><a href="#">Home</a></p>
-          <p class="nav-link"><a href="#">About</a></p>
-          <p class="nav-link"><a href="./vid">Skills</a></p>
-          <p class="nav-link"><a href="./vid">Contact</a></p>
+          <p class="nav-link"><a href="#about">About</a></p>
+          <p class="nav-link"><a href="#vid">Skills</a></p>
+          <p class="nav-link"><a href="#vid">Contact</a></p>
         </div>
       </nav>
       <section id="banner">
         <div class="img banner-img">
           <img
-            src="son_deneme/gallery/assets/IMG_2217 (2).JPG"
+            src="son_deneme/gallery/assets/business-2717063.jpg"
             alt="banner-image"/>
         </div>
 
@@ -58,7 +58,7 @@
         </div>
         <div class="img about-img">
           <img
-            src="son_deneme/gallery/assets/light-bulbs-1125016.jpg"
+            src="son_deneme/gallery/assets/IMG_2217 (2).JPG"
             alt="about-image"
           />
         </div>
