foto wurde gändert

--- a/neue Portfolio/index.html
+++ b/neue Portfolio/index.html
@@ -48,7 +48,7 @@
       <section id="about">
         <div class="img about-img">
           <img
-            src="son_deneme/gallery/assets/IMG_2217 (2).JPG"
+            src="son_deneme/gallery/assets/IMG_2217.JPG"
             alt="about-image"
           />
         </div>
