--- a/neue Portfolio/index.html
+++ b/neue Portfolio/index.html
@@ -21,15 +21,15 @@
       <nav>
         <h3 id="logo"><img src="son_deneme/gallery/assets/neu logo.png"></h3>
         <div class="nav-links">
-          <p class="nav-link"><a href="#">Home</a></p>
+          <p class="nav-link"><a href="#logo">Home</a></p>
           <p class="nav-link"><a href="#about">About</a></p>
           <p class="nav-link"><a href="#about">Projekts</a></p>
           <p class="nav-link"><a href="#vid">Skills</a></p>
           <p class="nav-link"><a href="#vid">Contact</a></p>
         </div>
       </nav>
-      <section id="banner">
-        <div class="banner-text">
+      <section id="developer">
+        <div class="developer-text">
           <h2>I'm a <span> Web Developer</span></h2>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus
@@ -37,10 +37,10 @@
           </p>
           <button><a href="#about">Learn more</a></button>
         </div>
-        <div class="img banner-img">
+        <div class="img developer-img">
           <img
             src="son_deneme/gallery/assets/business-2717063.jpg"
-            alt="banner-image"/>
+            alt="developer-image"/>
         </div>
         
       </section>
