main.js ein bisschen  wurde gändert

--- a/neue Portfolio/index.html
+++ b/neue Portfolio/index.html
@@ -102,7 +102,7 @@
         </div>
         <div class="card-wrapper">
           <div class="card">
-            <i class="fas fa-child"></i>
+            <i class="fas fa-child icon"></i>
             <h4 class="card-text">BFY Kindergarten</h4>
           </div>
           <div class="card">
