alle background farbe geändert

--- a/neue Portfolio/meine_Portfolio/index.html
+++ b/neue Portfolio/meine_Portfolio/index.html
@@ -19,7 +19,7 @@
   <body>
     <div class="container">
       <nav>
-        <h3 id="logo"><img src="son_deneme/gallery/assets/neu logo.png"></h3>
+        <h3 id="logo"><img src="./gallery/assets/gallery/neu logo.png"></h3>
         <div class="nav-links">
           <p class="nav-link"><a href="#logo">Home</a></p>
           <p class="nav-link"><a href="#about">About</a></p>
@@ -39,7 +39,7 @@
         </div>
         <div class="img developer-img">
           <img
-            src="son_deneme/gallery/assets/business-2717063.jpg"
+            src="./gallery/assets/gallery/business-2717063.jpg"
             alt="developer-image"/>
         </div>
         
@@ -48,7 +48,7 @@
       <section id="about">
         <div class="img about-img">
           <img
-            src="son_deneme/gallery/assets/IMG_2217.JPG"
+            src="./gallery/assets/gallery/IMG_2217.JPG"
             alt="about-image"
           />
         </div>
@@ -84,7 +84,7 @@
         </div>
         <div class="video">
           <video muted autoplay loop>
-            <source src="./son_deneme/gallery/video1.mp4" />
+            <source src="./gallery/assets/gallery/video1.mp4" />
           </video>
         </div>
       </section>
