--- a/neue Portfolio/meine_Portfolio/index.html
+++ b/neue Portfolio/meine_Portfolio/index.html
@@ -89,7 +89,7 @@
         </div>
       </section>
     
-      <section id="about">
+      <section id="projekts">
        
         <div class="about-text2">
           <h2>My <span>Projekts</span></h2>
@@ -101,15 +101,15 @@
           </p>
         </div>
         <div class="card-wrapper">
-          <div class="card">
+          <div class="card2">
             <i class="fas fa-child icon"></i>
             <h4 class="card-text">BFY Kindergarten</h4>
           </div>
-          <div class="card">
+          <div class="card2">
             <i class="fas fa-city icon"></i>
             <h4 class="card-text">Unsere Stadte</h4>
           </div>
-          <div class="card">
+          <div class="card2">
             <i class="fas fa-rocket icon"></i>
             <h4 class="card-text">Space Projekt</h4>
           </div>
