projekt fotos wurden hinzugefügt

--- a/neue Portfolio/meine_Portfolio/index.html
+++ b/neue Portfolio/meine_Portfolio/index.html
@@ -101,16 +101,17 @@
           </p>
         </div>
         <div class="card-wrapper">
-          <div class="card2">
-            <i class="fas fa-child icon"></i>
+          <div class="card2 kinder">
+            <!-- <i class="fas fa-child icon"></i> -->
             <h4 class="card-text">BFY Kindergarten</h4>
           </div>
-          <div class="card2">
-            <i class="fas fa-city icon"></i>
+          <div class="card2 brücke">
+            <!-- <i class="fas fa-city icon"></i> -->
             <h4 class="card-text">Unsere Stadte</h4>
           </div>
-          <div class="card2">
-            <i class="fas fa-rocket icon"></i>
+          <div class="card2 space">
+          
+            <!-- <i class="fas fa-rocket icon"></i> -->
             <h4 class="card-text">Space Projekt</h4>
           </div>
         </div>
