react und nodejs wurden hinzugefügt

--- a/neue Portfolio/meine_Portfolio/index.html
+++ b/neue Portfolio/meine_Portfolio/index.html
@@ -81,6 +81,14 @@
             <i class="fab fa-js-square icon"></i>
             <h4 class="card-text">JavaScript</h4>
           </div>
+          <div class="card">
+            <i class="fab fa-react icon"></i>
+            <h4 class="card-text">React</h4>
+          </div>
+          <div class="card">
+            <i class="fab fa-node icon"></i>
+            <h4 class="card-text">Nodejs</h4>
+          </div>
         </div>
         <div class="video">
           <video muted autoplay loop>
