card name zasammengepasst

--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
           </p>
         </div>
         <div class="card-wrapper">
-          <div class="card2 kinder">
+          <div class="card2 weather">
             <h4 class="card-text">ReactWeatherApp</h4>
           </div>
-          <div class="card2 brücke">
+          <div class="card2 movies">
             <h4 class="card-text">ReactMovieApp</h4>
           </div>
-          <div class="card2 space">
+          <div class="card2 game">
             <h4 class="card-text">NumberGame</h4>
           </div>
         </div>
