card link von app hinzugefügt

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
         <div class="card-wrapper">
           <div class="card2 weather">
-            <h4 class="card-text">ReactWeatherApp</h4>
+            <h4 class="card-text"><a href="https://reactweatherappbaha.netlify.app/">ReactWeatherApp</a></h4>
           </div>
           <div class="card2 movies">
             <h4 class="card-text">ReactMovieApp</h4>
