andere carte auch hinzugefügt und text underline none

--- a/index.html
+++ b/index.html
@@ -105,13 +105,23 @@
         </div>
         <div class="card-wrapper">
           <div class="card2 weather">
-            <h4 class="card-text"><a href="https://reactweatherappbaha.netlify.app/">ReactWeatherApp</a></h4>
+            <h4 class="card-text">
+              <a href="https://reactweatherappbaha.netlify.app/"
+                >ReactWeatherApp</a
+              >
+            </h4>
           </div>
           <div class="card2 movies">
-            <h4 class="card-text">ReactMovieApp</h4>
+            <h4 class="card-text">
+              <a href="https://reactweatherappbaha.netlify.app/"
+                >ReactMovieApp</a
+              >
+            </h4>
           </div>
           <div class="card2 game">
-            <h4 class="card-text">NumberGame</h4>
+            <h4 class="card-text">
+              <a href="https://reactweatherappbaha.netlify.app/">NumberGame</a>
+            </h4>
           </div>
         </div>
       </section>
