target blank erstellt

--- a/index.html
+++ b/index.html
@@ -66,24 +66,24 @@
         <h3>My <span>Skills</span></h3>
         <div class="card-wrapper">
           <div class="card">
-            <a href="https://developer.mozilla.org/de/docs/Learn/Getting_started_with_the_web/HTML_basics"><i class="fab fa-html5 icon"></i></a>
+            <a href="https://developer.mozilla.org/de/docs/Learn/Getting_started_with_the_web/HTML_basics" target="_blank"><i class="fab fa-html5 icon"></i></a>
             <h4 class="card-text">Html</h4>
           </div>
           <div class="card">
-            <a href="https://developer.mozilla.org/de/docs/Learn/Getting_started_with_the_web/CSS_basics"><i class="fab fa-css3-alt icon"></i></a>
+            <a href="https://developer.mozilla.org/de/docs/Learn/Getting_started_with_the_web/CSS_basics" target="_blank"><i class="fab fa-css3-alt icon"></i></a>
             <h4 class="card-text">Css</h4>
           </div>
           <div class="card">
-            <a href="https://www.javascripttutorial.net/"><i class="fab fa-js-square icon"></i></a>
+            <a href="https://www.javascripttutorial.net/" target="_blank"><i class="fab fa-js-square icon"></i></a>
 
             <h4 class="card-text">JavaScript</h4>
           </div>
           <div class="card">
-            <a href="https://reactjs.org/"><i class="fab fa-react icon"></i></a>
+            <a href="https://reactjs.org/" target="_blank"><i class="fab fa-react icon"></i></a>
             <h4 class="card-text">React</h4>
           </div>
           <div class="card">
-            <a href="https://nodejs.org/en/"><i class="fab fa-node icon"></i>
+            <a href="https://nodejs.org/en/" target="_blank"><i class="fab fa-node icon"></i>
             </a>
 
             <h4 class="card-text">Nodejs</h4>
